* fix gradle version

--- a/app.gradle
+++ b/app.gradle
@@ -47,7 +47,7 @@ println "........app.gradle........end"
 
 android {
     namespace "$_namespace" //gradle7.5+
-    if (gradle.gradleVersion.charAt(0) >= '8') {
+    if (Integer.parseInt(gradle.gradleVersion.split("\\.")[0]) >= 8) {
         compileSdk Integer.parseInt(_C_SDK)
     } else {
         compileSdkVersion Integer.parseInt(_C_SDK)
@@ -58,7 +58,7 @@ android {
         //vectorDrawables.useSupportLibrary = true
 
         applicationId "$application_id"
-        if (gradle.gradleVersion.charAt(0) >= '8') {
+        if (Integer.parseInt(gradle.gradleVersion.split("\\.")[0]) >= 8) {
             minSdk Integer.parseInt(_M_SDK)
             targetSdk Integer.parseInt(_T_SDK)
         } else {
@@ -109,7 +109,7 @@ android {
 //        }
 //    }
 
-    if (gradle.gradleVersion.charAt(0) >= '8') {
+    if (Integer.parseInt(gradle.gradleVersion.split("\\.")[0]) >= 8) {
         flavorDimensions = ['flavor']
     } else {
         flavorDimensions 'flavor'
@@ -189,7 +189,7 @@ android {
         }
     }
 
-    if (gradle.gradleVersion.charAt(0) >= '6') {
+    if (Integer.parseInt(gradle.gradleVersion.split("\\.")[0]) >= 6) {
         //android.packageBuildConfig = false
         //https://stackoverflow.com/questions/63072764/android-packagebuildconfig-false-is-deprecated
         buildFeatures {
