--- a/app2.gradle
+++ b/app2.gradle
@@ -169,7 +169,7 @@ android {
         }
     }
 
-    if (gradle.gradleVersion.charAt(0) >= '6') {
+    if (Integer.parseInt(gradle.gradleVersion.split("\\.")[0]) >= 6) {
         //android.packageBuildConfig = false
         //https://stackoverflow.com/questions/63072764/android-packagebuildconfig-false-is-deprecated
         buildFeatures {
