--- a/appFlavor.gradle
+++ b/appFlavor.gradle
@@ -5,7 +5,7 @@ def _minify_enabled_debug = project.hasProperty("minify_enabled_debug") ? (proje
 def _minify_enabled = project.hasProperty("minify_enabled") ? (project.ext.minify_enabled == "true") : _minify_enabled_debug
 
 android {
-    if (gradle.gradleVersion.charAt(0) >= '8') {
+    if (Integer.parseInt(gradle.gradleVersion.split("\\.")[0]) >= 8) {
         flavorDimensions = ['flavor']
     } else {
         flavorDimensions 'flavor'
