--- a/adb.gradle
+++ b/adb.gradle
@@ -16,7 +16,7 @@ static def getApplicationIdList(rootProject) {
 
         if (isApp) {
             def defaultConfig
-            if (gradle.gradleVersion.charAt(0) >= '8') {
+            if (Integer.parseInt(gradle.gradleVersion.split("\\.")[0]) >= 8) {
                 defaultConfig = projectObj.android.defaultConfig
             } else {
                 def applicationPlugin = projectObj.plugins.findPlugin(application)
