--- a/base.gradle
+++ b/base.gradle
@@ -7,7 +7,7 @@ android {
         disable 'GoogleAppIndexingWarning'
     }
     compileOptions {
-        if (gradle.gradleVersion.charAt(0) >= '8') {
+        if (Integer.parseInt(gradle.gradleVersion.split("\\.")[0]) >= 8) {
             sourceCompatibility JavaVersion.VERSION_17
             targetCompatibility = JavaVersion.VERSION_17
         } else {
@@ -19,7 +19,7 @@ android {
     // For Kotlin projects https://developer.android.com/studio/write/java8-support.html
     /*kotlinOptions { jvmTarget = "1.8" }*/
     kotlinOptions {
-        if (gradle.gradleVersion.charAt(0) >= '8') {
+        if (Integer.parseInt(gradle.gradleVersion.split("\\.")[0]) >= 8) {
             jvmTarget = JavaVersion.VERSION_17
         } else {
             jvmTarget = JavaVersion.VERSION_1_8
