--- a/umeng_lp.gradle
+++ b/umeng_lp.gradle
@@ -22,7 +22,11 @@ def urlFile = { url, name ->
 }
 
 dependencies {
-    implementation urlFile('https://gitcode.net/angcyo/file/-/raw/master/aar/UMeng/umeng-abtest-v1.0.0.aar', 'umeng-abtest-v1.0.0.aar')
+    /*implementation urlFile('https://gitcode.net/angcyo/file/-/raw/master/aar/UMeng/umeng-abtest-v1.0.0.aar', 'umeng-abtest-v1.0.0.aar')
     implementation urlFile('https://gitcode.net/angcyo/file/-/raw/master/aar/UMeng/umeng-apm-armeabi-v1.4.2.aar', 'umeng-apm-armeabi-v1.4.2.aar')
-    implementation urlFile('https://gitcode.net/angcyo/file/-/raw/master/aar/UMeng/umeng-asms-armeabi-v1.4.1.aar', 'umeng-asms-armeabi-v1.4.1.aar')
+    implementation urlFile('https://gitcode.net/angcyo/file/-/raw/master/aar/UMeng/umeng-asms-armeabi-v1.4.1.aar', 'umeng-asms-armeabi-v1.4.1.aar')*/
+
+    implementation urlFile('https://gitlab.com/angcyo/file/-/raw/master/aar/UMeng/umeng-abtest-v1.0.0.aar', 'umeng-abtest-v1.0.0.aar')
+    implementation urlFile('https://gitlab.com/angcyo/file/-/raw/master/aar/UMeng/umeng-apm-armeabi-v1.4.2.aar', 'umeng-apm-armeabi-v1.4.2.aar')
+    implementation urlFile('https://gitlab.com/angcyo/file/-/raw/master/aar/UMeng/umeng-asms-armeabi-v1.4.1.aar', 'umeng-asms-armeabi-v1.4.1.aar')
 }
