--- a/publish.gradle
+++ b/publish.gradle
@@ -1,3 +1,13 @@
+/**
+ * 1: apply from: "$gradleHost/master/publish.gradle"
+ * 2: libGroupId = 'com.angcyo'
+ * 3: libVersionName = '0.0.1'
+ * 4: libWinRepo = 'E:/maven'
+ * 5: libMacRepo = '/Users/angcyo'
+ * 6: gradlew publish
+ * */
+//https://docs.gradle.org/current/userguide/publishing_maven.html
+//默认输出路径<user>\.m2\repository
 apply plugin: 'maven-publish'
 
 /// 构建源码jar包
@@ -66,7 +76,7 @@ afterEvaluate {
                     version = versionName
 
                     //artifact javadocJar
-                    artifact sourcesJar
+                    //artifact sourcesJar //2023-8-12 Invalid publication 'release': multiple artifacts with the identical extension and classifier ('jar', 'sources').
                 }
             }
 
