--- a/includeAllModule.gradle
+++ b/includeAllModule.gradle
@@ -2,19 +2,31 @@ ext.maxDepth = 2
 ext.includeConfig = [:]
 ext.ignoreModule = []
 
-def rootPath = getRootDir()
-println "includeAllModule.gradle↓\n开始包含项目in->" + rootPath.getAbsolutePath()
-def ignoreFile = new File(rootPath, '.ignore')
+def rootDirFile /*File*/ = getRootDir()
+println "includeAllModule.gradle↓\n开始包含项目in->" + rootDirFile.getAbsolutePath()
+def ignoreFile = new File(rootDirFile, '.ignore')
 if (ignoreFile.exists()) {
     ignoreModule = ignoreFile.readLines('UTF8')
 }
 if (ignoreModule.size() > 0) {
     println "忽略以下Module->↓\n" + ignoreModule
 }
-listPath(rootPath)
+listPath(rootDirFile)
 //includeConfig.each { key, value ->
 //    println "->include " + value + " ::" + key
 //}
+
+def gradleModuleFolder = readProperty(new File(rootDir, "gradle.properties"), 'gradleModuleFolder')
+if (gradleModuleFolder != null) {
+    def folderList = gradleModuleFolder.toString().split(";")
+    folderList.each {
+        def file = new File(it)
+        if (file.exists()) {
+            listPath(file)
+        }
+    }
+}
+
 println "包含以下Module->↓\n" + includeConfig
 println "...end...↑\n"
 
@@ -39,7 +51,7 @@ def listPath(filePath, depth = 0 /*当前枚举的路径深度, 深度大于maxD
 }
 
 /**include复合目标的文件夹*/
-def includePath(filePath, parent) {
+def includePath(filePath /*File*/, parent) {
     if (filePath.isDirectory()) {
         def buildFile = new File(filePath, "build.gradle")
         def buildFileKts = new File(filePath, "build.gradle.kts")
@@ -55,12 +67,20 @@ def includePath(filePath, parent) {
             if (ignore) {
                 println '忽略->' + parent + ':' + path
             } else {
-                //println "->include " + path
+                //println "->include name:[${name}] path:[${path}]->$filePath"
                 includeConfig[name] = path
                 include path
+                project(path).projectDir = filePath
                 //rootProject.ext.includeConfig = includeConfig
                 //rootProject.extensions.includeConfig = includeConfig
             }
         }
     }
+}
+
+/**在指定文件中, 读取属性key*/
+def readProperty(file, key) {
+    Properties props = new Properties()
+    props.load(new FileInputStream(file))
+    return props[key]
 }
