--- a/includeAllModule.gradle
+++ b/includeAllModule.gradle
@@ -2,6 +2,8 @@ ext.maxDepth = 2
 ext.includeConfig = [:]
 ext.ignoreModule = []
 
+def autoInclude = rootProject.hasProperty('autoInclude') ? rootProject.autoInclude == "true" : true
+
 def rootDirFile /*File*/ = getRootDir()
 println "includeAllModule.gradle↓\n开始包含项目in->" + rootDirFile.getAbsolutePath()
 def ignoreFile = new File(rootDirFile, '.ignore')
@@ -22,7 +24,12 @@ if (gradleModuleFolder != null) {
     folderList.each {
         def file = new File(it)
         if (file.exists()) {
-            listPath(file)
+            if (file.isDirectory()) {
+                if (autoInclude) {
+                    includePath(file, "")
+                }
+                listPath(file)
+            }
         }
     }
 }
@@ -36,8 +43,6 @@ def listPath(filePath, depth = 0 /*当前枚举的路径深度, 深度大于maxD
     if (depth > maxDepth) {
         return
     }
-
-    def autoInclude = rootProject.hasProperty('autoInclude') ? rootProject.autoInclude == "true" : true
     if (filePath.isDirectory()) {
         filePath.listFiles()?.each {
             if (it.isDirectory()) {
