--- a/apk.gradle
+++ b/apk.gradle
@@ -11,6 +11,7 @@ def output = project.hasProperty("apk_path") ? project.ext.apk_path : ".apk"
 //APK输出文件名配置:(不包含扩展名)
 //可用参数: #an:app名字; #vn:版本名; #d:当天日期yyyy-MM-dd; #t:当天时间yyyy-MM-dd_HH-mm; #fn:风味名; #bn:编译类型名;
 //         #sn:使用的签名名称; #ka:使用的签名别名;
+//在ext中设置的属性一样可以通过`project.getProperty`获取
 
 def apkFormatName = project.hasProperty("apkName") ? project.ext.apkName : "#an-#vn_#d_#fn_#bn_#ka"
 
