--- a/publish.gradle
+++ b/publish.gradle
@@ -68,7 +68,9 @@ afterEvaluate {
 
                 release(MavenPublication) {
                     // Applies the component for the release build variant.
-                    from components.release
+                    if (!components.isEmpty()) {
+                        from components.release
+                    }
 
                     // You can then customize attributes of the publication as shown below.
                     groupId = libGroupId
@@ -82,6 +84,7 @@ afterEvaluate {
 
             //目标仓库配置
             repositories {
+                //mavenLocal()
                 maven {
                     // change to point to your repo, e.g. http://my.org/repo
                     //url = 'E:/AndroidProjects/maven'//"$buildDir/repo"
