--- a/common.gradle
+++ b/common.gradle
@@ -174,6 +174,7 @@ static def copyFile(String from, String toPath) {
             return
         }
         File dest = new File(toPath)
+        dest.parentFile.mkdirs()
         println '[common.gradle] 复制文件:' + source.getAbsolutePath() + " -> " + dest.getAbsolutePath()
 
         input = new FileInputStream(source)
