--- a/flutterApp.gradle
+++ b/flutterApp.gradle
@@ -93,6 +93,12 @@ android {
         }
     }
 
+    packagingOptions {
+        pickFirst 'lib/armeabi-v7a/libc++_shared.so'
+        pickFirst 'lib/arm64-v8a/libc++_shared.so'
+        pickFirst 'lib/x86_64/libc++_shared.so'
+    }
+
     sourceSets {
         main.java.srcDirs += 'src/main/kotlin'
     }
