--- a/flutterApp.gradle
+++ b/flutterApp.gradle
@@ -155,6 +155,12 @@ android {
             minifyEnabled _minify_enabled
             shrinkResources = _minify_enabled
             crunchPngs = true
+
+            // https://docs.flutter.dev/release/breaking-changes/default-abi-filters-android
+            // Clear the automatically set filters.
+            ndk.abiFilters.clear()
+            // Set your custom filters.
+            ndk.abiFilters= ["arm64-v8a", "armeabi-v7a"]
         }
     }
 }
