--- a/flutterApp.gradle
+++ b/flutterApp.gradle
@@ -37,11 +37,20 @@ if (_minify_enabled == null) {
     _minify_enabled = true
 }*/
 
+println "\n........flutterApp.gradle........"
+println "flutter.targetSdkVersion=${flutter.targetSdkVersion}"
+println "flutter.compileSdkVersion=${flutter.compileSdkVersion}"
+println "flutter.minSdkVersion=${flutter.minSdkVersion}"
+println "flutter.versionCode=${flutter.versionCode}"
+println "flutter.versionName=${flutter.versionName}"
+println "flutter.ndkVersion=${flutter.ndkVersion}"
+println "........flutterApp.gradle........end"
+
 def _minify_enabled_debug = project.hasProperty("flutter.minifyEnabledDebug") ? project.getProperty("flutter.minifyEnabledDebug").toBoolean() : false
 def _minify_enabled = project.hasProperty("flutter.minifyEnabled") ? project.getProperty("flutter.minifyEnabled").toBoolean() : true
-def _C_SDK = project.hasProperty("C_SDK") ? project.ext.C_SDK : '34'
-def _M_SDK = project.hasProperty("M_SDK") ? project.ext.M_SDK : '24'
-def _T_SDK = project.hasProperty("T_SDK") ? project.ext.T_SDK : '34'
+def _C_SDK = project.hasProperty("C_SDK") ? project.ext.C_SDK : flutter.compileSdkVersion
+def _M_SDK = project.hasProperty("M_SDK") ? project.ext.M_SDK : flutter.minSdkVersion
+def _T_SDK = project.hasProperty("T_SDK") ? project.ext.T_SDK : flutter.targetSdkVersion
 
 //def appId = "com.angcyo.flutter3.abc"
 
